--- a/style.css
+++ b/style.css
@@ -366,7 +366,7 @@
 
 .footer {
     background: #FBFBFB;
-    margin-top: 60px ;
+    margin-top: 60px;
 }
 
 .footer .container .footer-top {
@@ -744,3 +744,183 @@ figure {
 
 
 /*eCommerce contact page end*/
+
+
+/*card-info start*/
+
+.card-info .container {
+    display: flex;
+    padding-top: 50px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+
+.card-img {
+    position: relative;
+}
+
+.card-img img {
+    max-width: 550px;
+    width: 100%;
+    object-fit: cover;
+    max-height: 620px;
+}
+
+.card-discount {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+
+.card-discount span {
+    background-color: #D6763C;
+    border-radius: 100%;
+    font-weight: 700;
+    font-size: 15px;
+    color: #FFFFFF;
+    padding: 10px 6px;
+}
+
+.card-about {
+    display: flex;
+    flex-direction: column;
+}
+
+.card-about h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 48px;
+    color: #1D1D1D;
+}
+
+.card-price {
+    display: flex;
+    gap: 20px;
+    padding-top: 15px;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 29px;
+}
+
+.card-price p {
+    color: #024E82;
+}
+
+.card-star i {
+    font-weight: 900;
+    font-size: 13px;
+    line-height: 48px;
+    color: #D6763C;
+}
+
+.card-price p {
+    margin: 0;
+}
+
+.cardAbout-content {
+    max-width: 660px;
+    width: 100%;
+}
+
+.cardAbout-content p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #555555;
+    padding-bottom: 35px;
+}
+
+
+.card-select select {
+    max-width: 210px;
+    width: 100%;
+    height: 48px;
+    padding: 5px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #1D1D1D;
+    margin-bottom: 35px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.add-cart span {
+    max-width: 190px;
+    width: 100%;
+    background: #024E82;
+    padding: 13px 30px;
+    color: #FFFFFF;
+    cursor: pointer;
+}
+
+.add-cart p {
+    max-width: 250px;
+    width: 100%;
+    padding-top: 36px;
+}
+
+.change-button {
+    padding: 60px 0 50px 0;
+}
+
+.bottoms button {
+    padding: 10px;
+    margin-right: -5px;
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 18px;
+    color: #1D1D1D;
+    background: #FFFFFF;
+}
+
+.cb-content {
+    max-width: 1144px;
+    width: 100%;
+    border: 1px solid #555555;
+    padding: 30px;
+}
+
+.cb-content-two {
+    max-width: 1144px;
+    width: 100%;
+    border: 1px solid #555555;
+    padding: 30px;
+    display: none;
+}
+
+/*card-info end*/
+
+/*shopping card start*/
+
+.shopping-card .container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shopping-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-top: 50px;
+}
+
+.shopping-one {
+    display: flex;
+    justify-content: space-evenly;
+    border-bottom: 1px solid #1D1D1D;
+}
+
+.shopping-two {
+    display: flex;
+    justify-content: space-around;
+}
+
+.info2 {
+    display: flex;
+    align-items: center;
+}
+/*shopping card end*/
