--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@
     line-height: 28px;
     color: #1D1D1D;
     cursor: pointer;
+    margin: 5px !important;
 }
 
 .company input {
@@ -405,6 +406,8 @@
     font-weight: 500;
     border-bottom: 2px solid #000;
     outline: none;
+    background: #FBFBFB;
+    color: #000000;
 }
 
 .email-contact i {
@@ -413,7 +416,7 @@
 
 
 .company input::placeholder {
-    color: #9c4848;
+    color: #d1cccc;
 }
 
 .footer-bottom {
@@ -442,7 +445,6 @@ h4 {
     line-height: 28px;
     color: #1D1D1D;
 }
-
 
 
 .footer-bottom .pay {
@@ -906,21 +908,183 @@ figure {
     flex-direction: column;
     width: 100%;
     padding-top: 50px;
+    position: relative;
 }
 
-.shopping-one {
-    display: flex;
-    justify-content: space-evenly;
-    border-bottom: 1px solid #1D1D1D;
+
+.shopping-info td {
+    border-bottom: 1px solid #000;
+    padding: 20px;
+    text-align: center;
 }
 
-.shopping-two {
-    display: flex;
-    justify-content: space-around;
+.shopping-info i {
+    position: absolute;
+    bottom: 25px;
+    margin-right: 10px;
+    cursor: pointer;
+    font-size: 15px;
+    color: gray;
 }
 
-.info2 {
+.card-totals h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 48px;
+    color: #1D1D1D;
+}
+
+.card-totals .totals {
     display: flex;
+    flex-wrap: wrap;
+    max-width: 530px;
+    width: 100%;
+}
+
+.totals-one {
+    max-width: 530px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #000;
+}
+
+.totals-one .context p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #555555;
+}
+
+
+.totals-one .totals-price p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #1D1D1D;
+}
+
+.total-btn {
+    max-width: 250px;
+    width: 100%;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+
+.total-btn p {
+    display: flex;
+    justify-content: center;
     align-items: center;
+    background: #D6763C;
+    padding: 20px;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+
 }
+
 /*shopping card end*/
+
+
+/*building details start*/
+
+
+.billing-details .container p {
+    margin: 5px !important;
+}
+
+.billing-details .container h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 48px;
+    color: #1D1D1D;
+}
+
+.form label p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #555555;
+}
+
+
+.form label input {
+    margin-bottom: 20px;
+    max-width: 620px;
+    width: 100%;
+    height: 50px;
+    padding: 10px;
+}
+
+
+.form label input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #555555;
+}
+
+.orders table {
+    max-width: 1280px;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.orders .container h2 {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 48px;
+    color: #1D1D1D;
+}
+
+.orders table {
+    border: 1px solid #000;
+    border-collapse: collapse;
+}
+
+.orders table tr td {
+    padding: 10px;
+}
+
+.orders table tr:not(:last-child) {
+    border-bottom: 1px solid #000;
+}
+
+.place-order {
+    margin-top: 50px;
+    padding-bottom: 50px;
+}
+
+.place-order .container {
+    border: 1px solid #000;
+    max-width: 1240px;
+    width: 100%;
+    padding: 20px;
+    min-height: 245px;
+}
+
+.in-order p {
+    border: 1px solid #000;
+    padding: 20px;
+    background: #EBEBEB;
+}
+
+.placeOrder-btn {
+    max-width: 166px;
+    width: 100%;
+    height: 48px;
+    padding-top: 20px;
+}
+
+.placeOrder-btn p {
+    background: #D6763C;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    cursor: pointer;
+}
+/*building details end*/
